# backend/docs/swagger.json
@@ -933,7 +933,7 @@
                 "physicianID": {
                     "type": "integer"
                 },
-                "stockEquipmentID": {
+                "stock": {
                     "type": "integer"
                 },
                 "typeEquipmentID": {
@@ -956,10 +956,6 @@
                 "name": {
                     "description": "Name holds the value of the \"name\" field.",
                     "type": "string"
-                },
-                "stock": {
-                    "description": "Stock holds the value of the \"stock\" field.",
-                    "type": "integer"
                 }
             }
         },
@@ -1053,6 +1049,10 @@
                 },
                 "id": {
                     "description": "ID of the ent.",
+                    "type": "integer"
+                },
+                "stock": {
+                    "description": "Stock holds the value of the \"stock\" field.",
                     "type": "integer"
                 }
             }
